--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./src/index.js",
     "dev": "nodemon -r dotenv/config ./src/index.js",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watchAll"
   },
